# fieldlight-mesh

./: LICENSE.md  README.md
04_infrastructure/mesh/: .gitignore  LICENSE.md  Makefile  README.md  mesh_reference.md  pyproject.toml  requirements.txt
04_infrastructure/mesh/anchors/: fieldlight_mesh_node_confirmed.yml.md  mesh_routing_baseline.yml.md  trace_peer_channel_created.md
04_infrastructure/mesh/config/: Git push 8625.md  daemon_mesh_activation.yml.md  discovered_peers.example.yml  final_mesh_push_checklist.yml.md  ghost_kestrel_mesh_activation.yml.md  lemur_p2p_config.yml.md  lemur_route_schema.yml  lemur_route_schema.yml.md
04_infrastructure/mesh/docs/: CANON_INDEX.md  CODEX_LOCAL_FIRST_GOVERNANCE.md  CROSS_REPO_REFERENCES.md  DIGITAL_SELF_ARCHITECTURE.md  DISCOVERY_PLAN.md  IDENTITY_AND_SIGNATURES.md  INGRESS_CONTRACT.md  LIVE_TEST_PEEJ.md  MAC_ALPHA_RUNBOOK.md  MOBILE_EDGE_NODE.md  NDA_FLOW.md  NET_LAYER.md  NODE_ID.md  PEER_INSTALL_MACOS.md  PUBLISHING_LAYER.md  SUPRA_PHASE1_RUNBOOK.md  TECH_INDEX.md  TEST_STATUS.md  TOWN_SQUARE.md
04_infrastructure/mesh/fieldlight_mesh/: __init__.py  cli.py  client.py  default_routes.yml  frame.py  gui.py  handler.py  identity.py  inbox.py  lan_mdns.py  logs.py  mobile_edge.py  peer_registry.py  routing.py  server.py  sil.py  state.py  town_square.py
04_infrastructure/mesh/keys/: kestrel_pubkey.asc  lemur_pubkey.asc
04_infrastructure/mesh/logs/: ghost_behavior_reference.yml  lemur_echo_test_log.yml  lemur_fallback_routes.yml  mesh_send_20250805_1644.yml.md  reconciliation_samuel_gate.yml.md  routing_log.yml  sil_handshake_example.yml.asc
04_infrastructure/mesh/logs_testing_data_and_templates/: lemur_peerlink_test_01.yml  mesh_send_20250805_1644.yml.md  routing_log.yml  (+3 more)
(+43 files in other folders)
