[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fieldlight-mesh"
version = "0.4.0"
description = "Local-first SIL messaging for Fieldlight nodes"
readme = "README.md"
requires-python = ">=3.9"
license = "LicenseRef-Fieldlight-Custom-1.0"
license-files = ["LICENSE.md"]
authors = [{ name = "Anni McHenry" }]
dependencies = ["PyYAML>=6.0.1", "cryptography>=42.0"]

[project.optional-dependencies]
discovery = ["zeroconf>=0.132.0"]
dev = ["pytest>=8.0", "build>=1.2"]
app = ["pyinstaller>=6.0"]

[project.scripts]
fieldlight-mesh = "fieldlight_mesh.cli:main"
fieldlight-mesh-app = "fieldlight_mesh.gui:main"

[tool.setuptools]
packages = ["fieldlight_mesh"]

[tool.setuptools.package-data]
fieldlight_mesh = ["default_routes.yml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
